package simple;

option optimize_for = LITE_RUNTIME;
option java_package = "com.dyuproject.protostuff.protocompiler";
option java_outer_classname = "Simple";

message Hello {
  optional double inf_double = 14 [default = inf];
  optional double neg_inf_double = 15 [default = -inf];
  optional double nan_double = 16 [default = nan];
  optional float inf_float = 17 [default = inf];
  optional float neg_inf_float = 18 [default = -inf];
  optional float nan_float = 19 [default = nan];
  repeated int32 packed_int = 20 [packed=true];
  repeated int64 packed_long = 21 [packed=true];
  repeated float packed_float = 22 [packed=true];
  repeated double packed_double = 23 [packed=true];
  repeated int32 packed_int2 = 24 [packed=true];
  
  optional float large_float = 25 [default = 2E8];
  optional float small_negative_float = 26 [default = -8e-28];
  optional float some_float = 27 [default = -1.45];
  optional double some_double = 28 [default = -1000.0293];
}

enum TestEnum {
  TYPE0 = 0;
  TYPE1 = 1;
  TYPE2 = 2;
  TYPE3 = 3;
  TYPE4 = 4;
}

message Foo {
  enum EnumSample {
    TYPE0 = 0;
    TYPE1 = 1;
    TYPE2 = 2;
    TYPE3 = 3;
    TYPE4 = 4;
  }
  repeated int32 some_int = 1;
  repeated string some_string = 2;
  repeated Bar bar = 3;
  repeated EnumSample some_enum = 4;
  repeated bytes some_bytes = 5;
  repeated bool some_boolean = 6;
  repeated float some_float = 7;
  repeated double some_double = 8;
  repeated int64 some_long = 9;
  /*optional Goo goo = 10;
  
  message Goo {
    optional int32 zzz = 1;
  }*/
}

message Bar {
  enum Status {
    PENDING = 0;
    STARTED = 1;
    COMPLETED = 2;
  }
  optional int32 some_int = 1[default=0x7f];
  optional string some_string = 2[default = "\341\210\264"];
  optional Baz baz = 3;
  optional Status some_enum = 4;
  optional bytes some_bytes = 5[default = "\0\001\a\b\f\n\r\t\v\\\'\"\xfe"];
  optional bool some_boolean = 6;
  optional float some_float = 7[default=0x7f];
  optional double some_double = 8[default = 45.123f];
  optional int64 some_long = 9;
  
}

message Baz {
  required int64 id = 1;
  optional string name = 2[default="foo"];
  required int64 timestamp = 3;
  optional bytes data = 4 [default = 0xFACE];
  optional sfixed32 a = 5;
  optional sfixed64 b = 6;
  repeated uint32 c = 7;
}

